<resources>
    <string name="app_name">Skull Light</string>
    <string name="title_activity_dashboard">Skull light</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_flash">LED Skull</string>
    <string name="title_activity_screen">Skull Light</string>
    <string name="title_activity_color_screen">More Skull</string>
    <string name="title_activity_donation">Donation</string>
    <string name="title_activity_color_dashboard">Choose the skull</string>

    <string name="flashlight">Light</string>
    <string name="donationText">The developers of this app love orange and passion fruit juice, if you liked this app feel free to pay us a juice:)</string>
    <string name="pranks">Pranks</string>
    <string name="skullCamera">Skull Camera</string>
    <string name="payjuice">Pay me juice</string>

    <string name="donate1">Donate about 1 dollar</string>
    <string name="donate2">Donate about 5 dollar</string>
    <string name="donate3">Donate about 20 dollar</string>
    <string name="colorclick">Just Click on the Screen :)</string>

    <string name="chooseSkull">Choose a Skull!</string>

    <string name="givePermission">you need to allow permission</string>

    <string name="moreSkull">+ Skulls</string>

    <string-array name="sounds_array">
        <item>Horror Zombie</item>
        <item>Cruel Laugh</item>
        <item>Mad Laugh</item>
        <item>Scream Skull Light</item>
        <item>Build Up</item>
        <item>Guitar Hit</item>
        <item>Heartbeat</item>
        <item>Rain</item>
        <item>Aura</item>
        <item>Big Gun</item>
        <item>Explosion</item>
    </string-array>

    <string name="prankDescription">1.Choose a sound, 2.Choose a time for it start to play, 3.Put your device near a distracted friend and scare  him :)</string>

    <string-array name="times_array">
        <item>1 Minute</item>
        <item>3 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
    </string-array>


    <string name="setFearAlarm">Set Fear Alarm</string>
    <string name="cancelFearAlarm">Cancel Fear Alarm</string>



</resources>
