<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    tools:context="br.com.maracujasoftware.skulllight.DashboardActivity">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/meuscroll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:background="#263238">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="314dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout style="@style/style_layout">

                <LinearLayout
                    style="@style/style_layout_botoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/bt_flash"
                        style="@style/style_botoes"
                        android:background="@drawable/seletor_caveira1"
                        android:onClick="selecionarOpcao" />

                    <TextView
                        style="@style/style_text_botoes"
                        android:text="@string/flashlight" />

                </LinearLayout>

                <TextView

                    android:layout_width="35dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    style="@style/style_layout_botoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/bt_call_skullcamera"
                        style="@style/style_botoes"
                        android:background="@drawable/seletor_caveira2"
                        android:onClick="selecionarOpcao" />

                    <TextView
                        style="@style/style_text_botoes"
                        android:text="@string/skullCamera" />

                </LinearLayout>

            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="35dp" />

            <LinearLayout style="@style/style_layout">


                <LinearLayout
                    style="@style/style_layout_botoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/bt_call_prank"
                        style="@style/style_botoes"
                        android:background="@drawable/seletor_caveira3"
                        android:onClick="selecionarOpcao" />

                    <TextView
                        style="@style/style_text_botoes"
                        android:text="@string/pranks"/>

                </LinearLayout>


                <TextView

                    android:layout_width="35dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    style="@style/style_layout_botoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/bt_doacao"
                        style="@style/style_botoes"
                        android:background="@drawable/seletor_juice"
                        android:onClick="selecionarOpcao" />

                    <TextView
                        style="@style/style_text_botoes"
                        android:text="@string/payjuice" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/propaganda"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <!-- android:layout_alignParentLeft="true" -->

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7040951679419231/6562731908" />

    </FrameLayout>
</RelativeLayout>
